# Disease_gene_prioritization_GCN

./: README.md  main_prioritization.py  pyproject.toml  requirements.txt
data_prioritization/: .gitignore
decagon/deep/: layers.py  model.py  optimizer.py
result/: .gitignore
