[tool.poetry]
name = "pgcn"
version = "0.1.0"
description = "PGCN: Disease gene prioritization by disease and gene embedding through GCN"
authors = ["Yu Li <liyu@cse.cuhk.edu.hk>"]

[tool.poetry.dependencies]
python = ">=3.7 <3.11"
tensorflow = "2.8.0"
scikit-learn = "~1"
matplotlib = "~3"
networkx = "~2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

